# tig

./: .gitattributes  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
.github/workflows/: ci-build.yml
example/: main.c
first_party/bink_compat/: CMakeLists.txt  README.md
first_party/bink_compat/include/: bink_compat.h
first_party/bink_compat/src/: bink_compat.c
first_party/mss_compat/: CMakeLists.txt  README.md
first_party/mss_compat/include/: mss_compat.h
first_party/mss_compat/src/: mss_compat.c
include/tig/: art.h  bmp.h  bmp_utils.h  bsearch.h  button.h  color.h  compat.h  core.h  database.h  debug.h  draw.h  dxinput.h  file.h  file_cache.h  find_file.h  font.h  guid.h  idxtable.h  kb.h  memory.h  menu.h  message.h  mouse.h  movie.h  net.h  net_blacklist.h  net_xfer.h  palette.h  rect.h  sound.h  str_parse.h  tig.h  timer.h  types.h  video.h  window.h
src/: art.c  bmp.c  bmp_utils.c  bsearch.c  button.c  color.c  compat.c  core.c  database.c  debug.c  draw.c  dxinput.c  file.c  file_cache.c  find_file.c  font.c  guid.c  idxtable.c  kb.c  memory.c  menu.c  message.c  mouse.c  movie.c  net.c  net_blacklist.c  net_xfer.c  palette.c  rect.c  sound.c  str_parse.c  timer.c  video.c  window.c
test/: art_tests.cc  bmp_utils_tests.cc  bsearch_tests.cc  color_tests.cc  database_tests.cc  dxinput_tests.cc  idxtable_tests.cc  memory_tests.cc  palette_tests.cc  rect_tests.cc  str_parse_tests.cc  timer_tests.cc
